--- a/android-sdk/4.1.3.md
+++ b/android-sdk/4.1.3.md
@@ -15,15 +15,16 @@ nav_order: 91
 * [Functions](#4.1.3-functions)
 * [Events](#4.1.3-events)
 * [Navigation](#4.1.3-navigation)
+* [GlobalLocationProvider](#4.1.3-global-location-provider)
 * [CrowdConnected location provider](#4.1.3-cc-navigation)
 * [IndoorAtlas location provider](#4.1.3-ia-navigation)
 * [ExpoFP-GPS location provider](#4.1.3-efp-navigation)
 
-### What's New in ExpoFP Fplan version 4.1.3<a id='4.1.3-what-is-new'></a>
+## What's New in ExpoFP Fplan version 4.1.3<a id='4.1.3-what-is-new'></a>
 
 Bugs have been fixed.
 
-### Setup<a id='4.1.3-setup'></a>
+## Setup<a id='4.1.3-setup'></a>
 
 Add Maven repository reference to settings.gradle file(in root of your project):
 
@@ -65,7 +66,7 @@ Add permissions in "AndroidManifest.xml" file:
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 ```
 
-### Usage<a id='4.1.3-usage'></a>
+## Usage<a id='4.1.3-usage'></a>
 
 Add FplanView to layout:
 
@@ -141,7 +142,7 @@ _fplanView = findViewById(R.id.fplanView);
 _fplanView.destroy();
 ```
 
-### Offline mode<a id='4.1.3-offline'></a>
+## Offline mode<a id='4.1.3-offline'></a>
 
 ExpoFP SDK provides the following offline modes:
 
@@ -230,41 +231,42 @@ _fplanView = findViewById(R.id.fplanView);
 _fplanView.openZip("/mnt/sdcard/demo.zip", null, settings, getApplicationContext());
 ```
 
-### Functions<a id='4.1.3-functions'></a>
+## Functions<a id='4.1.3-functions'></a>
 
-Select booth:
+#### Select booth function
 
 ```java
 _fplanView.selectBooth("720");
 ```
 
-Select exhibitor:
+#### Select exhibitor function
 
 ```java
 _fplanView.selectExhibitor("ExpoPlatform");
 ```
 
-Build route:
+#### Build route function
 
 ```java
 _fplanView.selectRoute("720", "751");
 ```
 
-Set current position(Blue-dot):
+#### Set current position(Blue-dot) function
 
 ```java
 _fplanView.selectCurrentPosition(2875, 1734);
 ```
 
-Clear floor plan:
+#### Clear floor plan function
 
 ```java
 _fplanView.clear();
 ```
 
-### Events<a id='4.1.3-events'></a>
+## Events<a id='4.1.3-events'></a>
 
-Floor plan ready event:
+#### Floor plan ready event
+This event is called when the plan initialization process has successfully completed.
 
 ```java
 @Override
@@ -272,7 +274,8 @@ public void onFpConfigured() {
 }
 ```
 
-Event called when an error occurs while initializing the plan:
+#### Floor plan init error event
+This event is called when an error occurs while initializing the plan.
 
 ```java
 @Nullable
@@ -281,7 +284,8 @@ public void onFpConfigureError(int errorCode, String description) {
 }
 ```
 
-Select booth event:
+#### Select booth event
+This event is called when a booth is clicked.
 
 ```java
 @Override
@@ -289,7 +293,8 @@ public void onBoothClick(@Nullable String id, @Nullable String name) {
 }
 ```
 
-Route create event:
+#### Route create event
+This event is called when the route is successfully built.
 
 ```java
 @Override
@@ -297,7 +302,8 @@ public void onDirection(@Nullable Route route) {
 }
 ```
 
-Receive message event:
+#### Receive message event
+Currently not in use.
 
 ```java
 @Override
@@ -305,7 +311,8 @@ public void onMessageReceived(@Nullable String message) {
 }
 ```
 
-Details open event:
+#### Details open event
+This event is called when opening a panel with information, it can be a panel with information about an open booth, a route, etc.
 
 ```java
 @Override
@@ -313,7 +320,8 @@ public void onDetails(@Nullable Details details) {
 }
 ```
 
-Exhibitor custom button click event:
+#### Exhibitor custom button click event
+This event is called after clicking a custom button in the panel with information about the exhibitor.
 
 ```swift
 @Override
@@ -321,21 +329,25 @@ public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, St
 }
 ```
 
-### Navigation<a id='4.1.3-navigation'></a>
+## Navigation<a id='4.1.3-navigation'></a>
 
 There are 2 ways to use navigation in FplanView. The first way is to explicitly specify the provider in the FplanView settings. In this case, FplanView will start and stop the LocationProvider on its own.
 
 ```java
 LocationProvider locationProvider = ...;
 
-Settings settings = new Settings("https://demo.expofp.com", false)
+Settings settings = new Settings("https://demo.expofp.com")
                 .withLocationProvider(locationProvider);
 
 _fplanView = findViewById(R.id.fplanView);
 _fplanView.init(settings);
 ```
 
-The second way is to run the GlobalLocationProvider when the program starts:
+The second way is to run in the background using GlobalLocationProvider.
+
+#### GlobalLocationProvider<a id='4.1.3-global-location-provider'></a>
+
+Very often needed to run a location provider in the background, ExpoFP SDK has a GlobalLocationProvider for this. The GlobalLocationProvider runs once at program startup and work in the background.
 
 ```java
 LocationProvider locationProvider = ...;
@@ -347,7 +359,7 @@ GlobalLocationProvider.start();
 When using the GlobalLocationProvider in the FplanView settings, you need to call the 'withGlobalLocationProvider' function:
 
 ```java
-Settings settings = new Settings("https://demo.expofp.com", false)
+Settings settings = new Settings("https://demo.expofp.com")
                  .withGlobalLocationProvider();
 
 _fplanView = findViewById(R.id.fplanView);
@@ -360,9 +372,9 @@ When the program terminates, the GlobalLocationProvider must also be stopped:
 GlobalLocationProvider.stop();
 ```
 
-### CrowdConnected location provider<a id='4.1.3-cc-navigation'></a>
+## CrowdConnected location provider<a id='4.1.3-cc-navigation'></a>
 
-Setup:
+#### Setup
 
 Add Maven repository reference to settings.gradle file(in root of your project):
 
@@ -398,14 +410,42 @@ Add permissions in "AndroidManifest.xml" file:
 <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 ```
 
-LocationProvider initialization:
+#### LocationProvider initialization
 
 ```java
 com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
 LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 ```
 
-Aliases:
+#### Recommended use
+
+When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.1.3-global-location-provider).
+
+```java
+com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
+LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
+
+GlobalLocationProvider.init(locationProvider);
+GlobalLocationProvider.start();
+```
+
+On initial startup, the CrowdConnectedProvider checks for permissions, if the permissions are delegated by the user then the CrowdConnectedProvider starts running, if there are no permissions, the CrowdConnectedProvider waits for any plan to open and requests the necessary permissions after the plan is opened. When opening a plan, you must specify "withGlobalLocationProvider" in the settings:
+
+```java
+Settings settings = new Settings("https://demo.expofp.com")
+                 .withGlobalLocationProvider();
+
+_fplanView = findViewById(R.id.fplanView);
+_fplanView.init(settings);
+```
+
+When the program terminates, the GlobalLocationProvider must also be stopped:
+
+```java
+GlobalLocationProvider.stop();
+```
+
+#### Aliases
 
 ```java
 com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
@@ -414,7 +454,7 @@ lpSettings.setAlias("KEY_2", "VALUE_2");
 LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 ```
 
-Notification settings:
+#### Notification settings
 
 ```java
 com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
@@ -422,9 +462,9 @@ lpSettings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON);
 LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 ```
 
-### IndoorAtlas location provider<a id='4.1.3-ia-navigation'></a>
+## IndoorAtlas location provider<a id='4.1.3-ia-navigation'></a>
 
-Setup:
+#### Setup
 
 Add Maven repository reference to settings.gradle file(in root of your project):
 
@@ -458,7 +498,7 @@ Add permissions in "AndroidManifest.xml" file:
 <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 ```
 
-LocationProvider initialization:
+#### LocationProvider initialization:
 
 ```java
 LocationProvider locationProvider = new com.expofp.indooratlas.IndoorAtlasProvider(getApplication(), "API_KEY", "API_SECRET_KEY");
@@ -466,7 +506,7 @@ LocationProvider locationProvider = new com.expofp.indooratlas.IndoorAtlasProvid
 
 ## ExpoFP-GPS location provider<a id='4.1.3-efp-navigation'></a>
 
-Setup:
+#### Setup
 
 Add Maven repository reference to settings.gradle file(in root of your project):
 
@@ -493,7 +533,7 @@ Add permissions in "AndroidManifest.xml" file:
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 ```
 
-LocationProvider initialization:
+#### LocationProvider initialization
 
 ```java
 LocationProvider locationProvider = new com.expofp.gpsprovider.GpsProvider(getApplication());
