--- a/ios-sdk/4.1.1.md
+++ b/ios-sdk/4.1.1.md
@@ -151,7 +151,8 @@ fplanUiView.clear()
 
 ### Events<a id='4.1.1-uikit-events'></a>
 
-Floor plan ready event:
+#### Floor plan ready event
+This event is called when the plan initialization process has successfully completed.
 
 ```swift
 fplanUiView.setOnFpReadyCallback {
@@ -159,7 +160,17 @@ fplanUiView.setOnFpReadyCallback {
 }
 ```
 
-Select booth event:
+#### Floor plan init error event
+This event is called when an error occurs while initializing the plan.
+
+```swift
+fplanUiView.setOnFpErrorCallback { errorCode, description in
+   print("[OnFpError] errorCode=\(errorCode); description=\(description)")      
+}
+```
+
+#### Select booth event
+This event is called when a booth is clicked.
 
 ```swift
 fplanUiView.setOnBoothClickCallback { id, name in
@@ -167,7 +178,8 @@ fplanUiView.setOnBoothClickCallback { id, name in
 }
 ```
 
-Route create event:
+#### Route create event
+This event is called when the route is successfully built.
 
 ```swift
 fplanUiView.setOnBuildDirectionCallback { direction in
@@ -175,7 +187,8 @@ fplanUiView.setOnBuildDirectionCallback { direction in
 }
 ```
 
-Details open event:
+#### Details open event
+This event is called when opening a panel with information, it can be a panel with information about an open booth, a route, etc.
 
 ```swift
 fplanUiView.setOnDetailsClickCallback { details in
@@ -184,7 +197,8 @@ fplanUiView.setOnDetailsClickCallback { details in
 }
 ```
 
-Exhibitor custom button click event:
+#### Exhibitor custom button click event
+This event is called after clicking a custom button in the panel with information about the exhibitor.
 
 ```swift
 fplanUiView.setOnExhibitorCustomButtonClickCallback { externalId, buttonNumber, buttonUrl in
@@ -339,7 +353,8 @@ fplanView.clear()
 ```
 ### Events<a id='4.1.1-swiftui-events'></a>
 
-Floor plan ready event:
+#### Floor plan ready event
+This event is called when the plan initialization process has successfully completed.
 
 ```swift
 import SwiftUI
@@ -369,7 +384,8 @@ struct FplanApp: App {
 }
 ```
 
-Select booth event:
+#### Select booth event
+This event is called when a booth is clicked.
 
 ```swift
 import SwiftUI
@@ -399,7 +415,8 @@ struct FplanApp: App {
 }
 ```
 
-Route create event:
+#### Route create event
+This event is called when the route is successfully built.
 
 ```swift
 import SwiftUI
@@ -429,7 +446,8 @@ struct FplanApp: App {
 }
 ```
 
-Details open event:
+#### Details open event
+This event is called when opening a panel with information, it can be a panel with information about an open booth, a route, etc.
 
 ```swift
 import SwiftUI
@@ -460,7 +478,8 @@ struct FplanApp: App {
 }
 ```
 
-Exhibitor custom button click event:
+#### Exhibitor custom button click event
+This event is called after clicking a custom button in the panel with information about the exhibitor.
 
 ```swift
 import SwiftUI
@@ -521,6 +540,8 @@ GlobalLocationProvider.stop();
 
 ## CrowdConnected location provider<a id='4.1.1-cc-navigation'></a>
 
+#### Setup
+
 Сocoapods:
 
 ```swift
@@ -551,7 +572,7 @@ Permissions(in Info.plist file):
 <string>Platform location requested for better indoor positioning experience.</string>
 ```
 
-Initialization:
+#### Initialization:
 
 ```swift
 let locationProvider: LocationProvider = CrowdConnectedProvider(Settings("APP_KEY", "TOKEN", "SECRET"))
@@ -567,6 +588,8 @@ let locationProvider: LocationProvider = CrowdConnectedProvider(settings)
 ```
 
 ## IndoorAtlas location provider<a id='4.1.1-ia-navigation'></a>
+
+#### Setup
 
 Сocoapods:
 
@@ -604,13 +627,15 @@ Permissions(in Info.plist file):
 <string>Bluetooth requested for better positioning experience.</string>
 ```
 
-Initialization:
+#### Initialization:
 
 ```swift
 let locationProvider: LocationProvider = IndoorAtlasProvider(Settings("API_KEY", "API_SECRET_KEY"))
 ```
 
 ## ExpoFP-GPS location provider<a id='4.1.1-efp-navigation'></a>
+
+#### Setup
 
 Сocoapods:
 
@@ -642,7 +667,7 @@ Permissions(in Info.plist file):
 <string>Platform location requested for better indoor positioning experience.</string>
 ```
 
-Initialization:
+#### Initialization:
 
 ```swift
 let locationProvider: LocationProvider = new GpsProvider(getApplication())
