--- a/ios-sdk/4.1.1.md
+++ b/ios-sdk/4.1.1.md
@@ -13,13 +13,13 @@ parent: iOS SDK
     * [Offline mode](#4.1.1-uikit-offline)
     * [Functions](#4.1.1-uikit-functions)
     * [Events](#4.1.1-uikit-events)
-    * [Navigation](#4.1.1-uikit-navigation)
 * [SwiftUI](#4.1.1-swiftui)
     * [Usage](#4.1.1-swiftui-usage)
     * [Offline mode](#4.1.1-swiftui-offline)
     * [Functions](#4.1.1-swiftui-functions)
     * [Events](#4.1.1-swiftui-events)
-    * [Navigation](#4.1.1-swiftui-navigation)
+* [Navigation](#4.1.1-navigation)
+* [GlobalLocationProvider](#4.1.1-global-location-provider)
 * [CrowdConnected location provider](#4.1.1-cc-navigation)
 * [IndoorAtlas location provider](#4.1.1-ia-navigation)
 * [ExpoFP-GPS location provider](#4.1.1-efp-navigation)
@@ -204,35 +204,6 @@ This event is called after clicking a custom button in the panel with informatio
 fplanUiView.setOnExhibitorCustomButtonClickCallback { externalId, buttonNumber, buttonUrl in
    print("[OnExhibitorCustomButtonClick] externalId=\(externalId); buttonNumber=\(buttonNumber); buttonUrl=\(buttonUrl)")
 }
-```
-
-### Navigation<a id='4.1.1-uikit-navigation'></a>
-
-There are 2 ways to use navigation in UIFplanView. The first way is to explicitly specify the provider. In this case, UIFplanView will start and stop the LocationProvider on its own.
-
-```swift
-let locationProvider: LocationProvider = ...
-fplanUiView.load(URL, noOverlay: false, locationProvider: locationProvider)
-```
-
-The second way is to run the GlobalLocationProvider when the program starts:
-
-```swift
-let locationProvider: LocationProvider = ...
-GlobalLocationProvider.initialize(locationProvider)
-GlobalLocationProvider.start()
-```
-
-Using the GlobalLocationProvider in the UIFplanView:
-
-```swift
-fplanUiView.load(URL, noOverlay: false, useGlobalLocationProvider: true)
-```
-
-When the program terminates, the GlobalLocationProvider must also be stopped:
-
-```swift
-GlobalLocationProvider.stop();
 ```
 
 ## SwiftUI<a id='4.1.1-swiftui'></a>
@@ -509,16 +480,20 @@ struct FplanApp: App {
 }
 ```
 
-### Navigation<a id='4.1.1-swiftui-navigation'></a>
+### Navigation<a id='4.1.1-navigation'></a>
 
 There are 2 ways to use navigation in FplanView. The first way is to explicitly specify the provider. In this case, FplanView will start and stop the LocationProvider on its own.
 
 ```swift
 let locationProvider: LocationProvider = ...
-fplanView.load(URL, noOverlay: false, locationProvider: locationProvider)
+fplanView.load(URL, locationProvider: locationProvider)
 ```
 
-The second way is to run the GlobalLocationProvider when the program starts:
+The second way is to run in the background using GlobalLocationProvider when the program starts.
+
+### GlobalLocationProvider<a id='4.1.1-global-location-provider'></a>
+
+Very often needed to run a location provider in the background, ExpoFP SDK has a GlobalLocationProvider for this. The GlobalLocationProvider runs once at program startup and work in the background.
 
 ```swift
 let locationProvider: LocationProvider = ...
@@ -526,10 +501,16 @@ GlobalLocationProvider.initialize(locationProvider)
 GlobalLocationProvider.start()
 ```
 
-Using the GlobalLocationProvider in the FplanView:
+Using the GlobalLocationProvider in the UIFplanView(UIKit):
 
 ```swift
-fplanView.load(URL, noOverlay: false, useGlobalLocationProvider: true)
+fplanUiView.load(URL, useGlobalLocationProvider: true)
+```
+
+Using the GlobalLocationProvider in the FplanView(SwiftUI):
+
+```swift
+fplanView.load(URL, useGlobalLocationProvider: true)
 ```
 
 When the program terminates, the GlobalLocationProvider must also be stopped:
@@ -578,7 +559,35 @@ Permissions(in Info.plist file):
 let locationProvider: LocationProvider = CrowdConnectedProvider(Settings("APP_KEY", "TOKEN", "SECRET"))
 ```
 
-Aliases:
+#### Recommended use
+
+When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.1.1-global-location-provider).
+
+```swift
+let locationProvider: LocationProvider = CrowdConnectedProvider(Settings("APP_KEY", "TOKEN", "SECRET"))
+GlobalLocationProvider.initialize(locationProvider)
+GlobalLocationProvider.start()
+```
+
+On initial startup, the CrowdConnectedProvider checks for permissions, if the permissions are delegated by the user then the CrowdConnectedProvider starts running, if there are no permissions, the CrowdConnectedProvider waits for any plan to open and requests the necessary permissions after the plan is opened. When opening a plan, you must specify "useGlobalLocationProvider" in the settings:
+
+UIFplanView(UIKit):
+```swift
+fplanUiView.load(URL, useGlobalLocationProvider: true)
+```
+
+FplanView(SwiftUI):
+```swift
+fplanView.load(URL, useGlobalLocationProvider: true)
+```
+
+When the program terminates, the GlobalLocationProvider must also be stopped:
+
+```swift
+GlobalLocationProvider.stop();
+```
+
+#### Aliases
 
 ```swift
 let settings = ExpoFpCrowdConnected.Settings("APP_KEY", "TOKEN", "SECRET")
