--- a/android-sdk/4.2.0.md
+++ b/android-sdk/4.2.0.md
@@ -2,7 +2,7 @@
 layout: default
 title: 4.2.0
 parent: Android SDK
-nav_order: 90
+nav_order: 89
 ---
 
 ## 4.2.0 version<a id='4.2.0'></a>
@@ -11,10 +11,10 @@ nav_order: 90
 * [What's New](#4.2.0-what-is-new)
 * [Setup](#4.2.0-setup)
 * [Usage](#4.2.0-usage)
-* [Festivals](#4.2.0-fest)
 * [Offline mode](#4.2.0-offline)
 * [Functions](#4.2.0-functions)
 * [Events](#4.2.0-events)
+* [Festivals](#4.2.0-fest)
 * [Navigation](#4.2.0-navigation)
 * [GlobalLocationProvider](#4.2.0-global-location-provider)
 * [CrowdConnected location provider](#4.2.0-cc-navigation)
@@ -127,89 +127,6 @@ Settings settings = new Settings("https://demo.expofp.com")
 
                     @Override
                     public void onMessageReceived(@Nullable String message) {
-                    }
-                });
-
-_fplanView = findViewById(R.id.fplanView);
-_fplanView.init(settings);
-```
-
-Stop FplanView.  
-After you finish working with FplanView, you need to stop it.  
-To do this, you need to call the 'destroy' function:  
-
-```java
-_fplanView = findViewById(R.id.fplanView);
-_fplanView.destroy();
-```
-
-## Festivals<a id='4.2.0-fest'></a>
-
-Init FplanView:
-
-```java
-Settings settings = new Settings("https://fest-digitalx23.expofp.com/")
-                  .withEventsListener(new FplanEventsListener() {
-                    @Override
-                    public void onFpConfigured() {
-                        Log.d("Demo", "[onFpConfigured]");
-                    }
-
-                    @Nullable
-                    @Override
-                    public void onFpConfigureError(int errorCode, String description) {
-                        Log.d("Demo", "[onFpConfigureError] " + description);
-                    }
-
-                    @Override
-                    public void onBoothClick(@Nullable String id, @Nullable String name) {
-                        Log.d("Demo", String.format(Locale.US, "[onBoothClick] booth id: '%s'; booth name: '%s'", id, name));
-                    }
-
-                    @Override
-                    public void onDirection(@Nullable Route route) {
-                        if (route != null) {
-                            String from = route.getBoothFrom() != null ? route.getBoothFrom().getName() : "null";
-                            String to = route.getBoothTo() != null ? route.getBoothTo().getName() : "null";
-
-                            String message = String.format(Locale.US, "[onDirection] distance: '%s'; time: '%d'; from: '%s'; to: '%s';",
-                                    route.getDistance(), route.getTime(), from, to);
-
-                            Log.d("Demo", message);
-                        } else {
-                            Log.d("Demo", "route = NULL");
-                        }
-                    }
-
-                    @Override
-                    public void onMessageReceived(@Nullable String message) {
-                        Log.d("Demo", String.format(Locale.US, "[onMessageReceived] message: '%s'", message));
-                    }
-
-                    @Override
-                    public void onDetails(@Nullable Details details) {
-                        Log.d("Demo", "[onDetails]");
-                        if (details != null) {
-                            Log.d("Demo", "details name=" + details.getName());
-                        } else {
-                            Log.d("Demo", "details = NULL");
-                        }
-                    }
-
-                    @Override
-                    public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
-                        Log.d("Demo", "[onExhibitorCustomButtonClick] externalId=" + externalId + "; buttonNumber=" + buttonNumber + "; buttonUrl=" + buttonUrl);
-                    }
-                })
-                .withFestivalEventsListener(new FestivalEventsListener() {
-                    @Override
-                    public void onDirectionsClick(String id, String url) {
-                        Log.d("Demo", String.format(Locale.US, "[onDirectionsClick] url: '%s'", url));
-                    }
-
-                    @Override
-                    public void onMoreDetailsClick(String id) {
-                        Log.d("Demo", String.format(Locale.US, "[onMoreDetailsClick] id: '%s'", id));
                     }
                 });
 
@@ -410,6 +327,112 @@ This event is called after clicking a custom button in the panel with informatio
 ```swift
 @Override
 public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
+}
+```
+
+## Festivals<a id='4.2.0-fest'></a>
+
+#### Init FplanView
+
+```java
+Settings settings = new Settings("https://fest-digitalx23.expofp.com/")
+                  .withEventsListener(new FplanEventsListener() {
+                    @Override
+                    public void onFpConfigured() {
+                        Log.d("Demo", "[onFpConfigured]");
+                    }
+
+                    @Nullable
+                    @Override
+                    public void onFpConfigureError(int errorCode, String description) {
+                        Log.d("Demo", "[onFpConfigureError] " + description);
+                    }
+
+                    @Override
+                    public void onBoothClick(@Nullable String id, @Nullable String name) {
+                        Log.d("Demo", String.format(Locale.US, "[onBoothClick] booth id: '%s'; booth name: '%s'", id, name));
+                    }
+
+                    @Override
+                    public void onDirection(@Nullable Route route) {
+                        if (route != null) {
+                            String from = route.getBoothFrom() != null ? route.getBoothFrom().getName() : "null";
+                            String to = route.getBoothTo() != null ? route.getBoothTo().getName() : "null";
+
+                            String message = String.format(Locale.US, "[onDirection] distance: '%s'; time: '%d'; from: '%s'; to: '%s';",
+                                    route.getDistance(), route.getTime(), from, to);
+
+                            Log.d("Demo", message);
+                        } else {
+                            Log.d("Demo", "route = NULL");
+                        }
+                    }
+
+                    @Override
+                    public void onMessageReceived(@Nullable String message) {
+                        Log.d("Demo", String.format(Locale.US, "[onMessageReceived] message: '%s'", message));
+                    }
+
+                    @Override
+                    public void onDetails(@Nullable Details details) {
+                        Log.d("Demo", "[onDetails]");
+                        if (details != null) {
+                            Log.d("Demo", "details name=" + details.getName());
+                        } else {
+                            Log.d("Demo", "details = NULL");
+                        }
+                    }
+
+                    @Override
+                    public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
+                        Log.d("Demo", "[onExhibitorCustomButtonClick] externalId=" + externalId + "; buttonNumber=" + buttonNumber + "; buttonUrl=" + buttonUrl);
+                    }
+                })
+                .withFestivalEventsListener(new FestivalEventsListener() {
+                    @Override
+                    public void onDirectionsClick(String id, String url) {
+                        Log.d("Demo", String.format(Locale.US, "[onDirectionsClick] url: '%s'", url));
+                    }
+
+                    @Override
+                    public void onMoreDetailsClick(String id) {
+                        Log.d("Demo", String.format(Locale.US, "[onMoreDetailsClick] id: '%s'", id));
+                    }
+                });
+
+_fplanView = findViewById(R.id.fplanView);
+_fplanView.init(settings);
+```
+
+#### Stop FplanView
+
+After you finish working with FplanView, you need to stop it.  
+To do this, you need to call the 'destroy' function:  
+
+```java
+_fplanView = findViewById(R.id.fplanView);
+_fplanView.destroy();
+```
+
+#### Festival events
+
+##### 'Directions' button click event
+This event is called after clicking a 'Directions' button in the panel with information about the exhibitor.
+
+```java
+@Override
+public void onDirectionsClick(String id, String url) {
+	Log.d("Demo", String.format(Locale.US, "[onDirectionsClick] url: '%s'", url));
+}
+```
+
+##### 'More details' button click event
+This event is called after clicking a 'More details' button in the panel with information about the exhibitor.
+
+```java
+@Override
+public void onMoreDetailsClick(String id) {
+	Log.d("Demo", String.format(Locale.US, "[onMoreDetailsClick] id: '%s'", id));
 }
 ```
 
