--- a/android-sdk/4.2.0.md
+++ b/android-sdk/4.2.0.md
@@ -23,7 +23,7 @@ nav_order: 89
 
 ## What's New in ExpoFP Fplan version 4.2.0<a id='4.2.0-what-is-new'></a>
 
-Bugs have been fixed.
+Integration with Festivals has been added.
 
 ## Setup<a id='4.2.0-setup'></a>
 
