--- a/ios-sdk/4.2.0.md
+++ b/ios-sdk/4.2.0.md
@@ -1,6 +1,6 @@
 ---
 title: 4.2.0
-nav_order: 192
+nav_order: 191
 parent: iOS SDK
 ---
 ## 4.2.0 version<a id='4.2.0'></a>
@@ -38,11 +38,13 @@ Cocoapods:
 pod 'ExpoFpFplan', '4.2.0'
 ```
 
-## UIKit<a id='4.2.0-uikit'></a>
+# UIKit<a id='4.2.0-uikit'></a>
 
-### Usage<a id='4.2.0-uikit-usage'></a>
+This documentation block describes all the features and functions of ExpoFP SDK for the UIKit platform.
 
-#### Init UIFplanView
+## Usage<a id='4.2.0-uikit-usage'></a>
+
+### Init UIFplanView
 
 ```swift
 import UIKit
@@ -67,7 +69,7 @@ class ViewController: UIViewController {
 }
 ```
 
-#### Stop UIFplanView
+### Stop UIFplanView
 
 After you finish working with UIFplanView, you need to stop it.  
 To do this, you need to call the 'destroy' function:  
@@ -76,7 +78,7 @@ To do this, you need to call the 'destroy' function:
 fplanUiView.destoy()
 ```
 
-### Offline mode<a id='4.2.0-uikit-offline'></a>
+## Offline mode<a id='4.2.0-uikit-offline'></a>
 
 ExpoFP SDK provides the following offline modes:
 
@@ -111,7 +113,7 @@ class ViewController: UIViewController {
 }
 ```
 
-### Functions<a id='4.2.0-uikit-functions'></a>
+## Functions<a id='4.2.0-uikit-functions'></a>
 
 Open plan:
 
@@ -155,9 +157,9 @@ Clear floor plan:
 fplanUiView.clear()
 ```
 
-### Events<a id='4.2.0-uikit-events'></a>
+## Events<a id='4.2.0-uikit-events'></a>
 
-#### Floor plan ready event
+### Floor plan ready event
 
 This event is called when the plan initialization process has successfully completed.
 
@@ -167,7 +169,7 @@ fplanUiView.setOnFpReadyCallback {
 }
 ```
 
-#### Floor plan init error event
+### Floor plan init error event
 
 This event is called when an error occurs while initializing the plan.
 
@@ -177,7 +179,7 @@ fplanUiView.setOnFpErrorCallback { errorCode, description in
 }
 ```
 
-#### Select booth event
+### Select booth event
 
 This event is called when a booth is clicked.
 
@@ -187,7 +189,7 @@ fplanUiView.setOnBoothClickCallback { id, name in
 }
 ```
 
-#### Route create event
+### Route create event
 
 This event is called when the route is successfully built.
 
@@ -197,7 +199,7 @@ fplanUiView.setOnBuildDirectionCallback { direction in
 }
 ```
 
-#### Details open event
+### Details open event
 
 This event is called when opening a panel with information, it can be a panel with information about an open booth, a route, etc.
 
@@ -208,7 +210,7 @@ fplanUiView.setOnDetailsClickCallback { details in
 }
 ```
 
-#### Exhibitor custom button click event
+### Exhibitor custom button click event
 
 This event is called after clicking a custom button in the panel with information about the exhibitor.
 
@@ -218,9 +220,9 @@ fplanUiView.setOnExhibitorCustomButtonClickCallback { externalId, buttonNumber, 
 }
 ```
 
-### Festivals<a id='4.2.0-uikit-fest'></a>
+## Festivals<a id='4.2.0-uikit-fest'></a>
 
-#### Init UIFplanView
+### Init UIFplanView
 
 ```swift
 import UIKit
@@ -245,7 +247,7 @@ class ViewController: UIViewController {
 }
 ```
 
-#### Stop UIFplanView
+### Stop UIFplanView
 
 After you finish working with UIFplanView, you need to stop it.  
 To do this, you need to call the 'destroy' function:  
@@ -254,9 +256,9 @@ To do this, you need to call the 'destroy' function:
 fplanUiView.destoy()
 ```
 
-#### Festival events
+### Festival events
 
-##### 'Directions' button click event
+#### 'Directions' button click event
 This event is called after clicking a 'Directions' button in the panel with information about the exhibitor.
 
 ```swift
@@ -265,7 +267,7 @@ fplanUiView.setOnFestDirectionsClick { id, url in
 }
 ```
 
-##### 'More details' button click event
+#### 'More details' button click event
 This event is called after clicking a 'More details' button in the panel with information about the exhibitor.
 
 ```swift
@@ -274,11 +276,13 @@ fplanUiView.setOnFestMoreDetailsClickCallback { id in
 }
 ```
 
-## SwiftUI<a id='4.2.0-swiftui'></a>
+# SwiftUI<a id='4.2.0-swiftui'></a>
 
-### Usage<a id='4.2.0-swiftui-usage'></a>
+This documentation block describes all the features and functions of ExpoFP SDK for the SwiftUI platform.
 
-#### Init FplanView
+## Usage<a id='4.2.0-swiftui-usage'></a>
+
+### Init FplanView
 
 ```swift
 import SwiftUI
@@ -305,7 +309,7 @@ struct FplanApp: App {
 }
 ```
 
-#### Stop FplanView
+### Stop FplanView
   
 After you finish working with FplanView, you need to stop it.  
 To do this, you need to call the 'destroy' function:  
@@ -314,7 +318,7 @@ To do this, you need to call the 'destroy' function:
 fplanView.destoy()
 ```
 
-### Offline mode<a id='4.2.0-swiftui-offline'></a>
+## Offline mode<a id='4.2.0-swiftui-offline'></a>
 
 ExpoFP SDK provides the following offline modes:
 
@@ -351,7 +355,7 @@ struct FplanApp: App {
 }
 ```
 
-### Functions<a id='4.2.0-swiftui-functions'></a>
+## Functions<a id='4.2.0-swiftui-functions'></a>
 
 Open plan:
 
@@ -394,9 +398,9 @@ Clear floor plan:
 ```swift
 fplanView.clear()
 ```
-### Events<a id='4.2.0-swiftui-events'></a>
+## Events<a id='4.2.0-swiftui-events'></a>
 
-#### Floor plan ready event
+### Floor plan ready event
 This event is called when the plan initialization process has successfully completed.
 
 ```swift
@@ -427,7 +431,7 @@ struct FplanApp: App {
 }
 ```
 
-#### Select booth event
+### Select booth event
 This event is called when a booth is clicked.
 
 ```swift
@@ -458,7 +462,7 @@ struct FplanApp: App {
 }
 ```
 
-#### Route create event
+### Route create event
 This event is called when the route is successfully built.
 
 ```swift
@@ -489,7 +493,7 @@ struct FplanApp: App {
 }
 ```
 
-#### Details open event
+### Details open event
 This event is called when opening a panel with information, it can be a panel with information about an open booth, a route, etc.
 
 ```swift
@@ -521,7 +525,7 @@ struct FplanApp: App {
 }
 ```
 
-#### Exhibitor custom button click event
+### Exhibitor custom button click event
 This event is called after clicking a custom button in the panel with information about the exhibitor.
 
 ```swift
@@ -552,9 +556,9 @@ struct FplanApp: App {
 }
 ```
 
-### Festivals<a id='4.2.0-swiftui-fest'></a>
+## Festivals<a id='4.2.0-swiftui-fest'></a>
 
-#### Init FplanView
+### Init FplanView
 
 ```swift
 import SwiftUI
@@ -570,7 +574,7 @@ struct FplanApp: App {
             VStack
             {
                 fplanView.onAppear{
-                    fplanView.load("https://demo.expofp.com")
+                    fplanView.load("https://fest-digitalx23.expofp.com")
                 }
                 .onDisappear {
                     fplanView.destoy()
@@ -581,7 +585,7 @@ struct FplanApp: App {
 }
 ```
 
-#### Stop FplanView
+### Stop FplanView
 
 After you finish working with FplanView, you need to stop it.  
 To do this, you need to call the 'destroy' function:  
@@ -590,9 +594,10 @@ To do this, you need to call the 'destroy' function:
 fplanView.destoy()
 ```
 
-#### Festival events
+### Festival events
 
-##### 'Directions' button click event
+#### 'Directions' button click event
+
 This event is called after clicking a 'Directions' button in the panel with information about the exhibitor.
 
 ```swift
@@ -608,12 +613,11 @@ struct FplanApp: App {
         WindowGroup {
             VStack
             {
-                fplanView
-				.onFestDirectionsClick { id, url in
+                fplanView.onFestDirectionsClick { id, url in
                     print("[OnFestDirectionsClick] id: \(id); url: \(url)")
                 }
                 .onAppear {
-                    fplanView.load("https://demo.expofp.com")
+                    fplanView.load("https://fest-digitalx23.expofp.com")
                 }
                 .onDisappear {
                     fplanView.destoy()
@@ -624,7 +628,7 @@ struct FplanApp: App {
 }
 ```
 
-##### 'More details' button click event
+#### 'More details' button click event
 This event is called after clicking a 'More details' button in the panel with information about the exhibitor.
 
 ```swift
@@ -640,12 +644,11 @@ struct FplanApp: App {
         WindowGroup {
             VStack
             {
-                fplanView
-				.onFestMoreDetailsClick { id in
+                fplanView.onFestMoreDetailsClick { id in
                     print("[OnFestMoreDetailsClick] id: \(id)")
                 }
                 .onAppear {
-                    fplanView.load("https://demo.expofp.com")
+                    fplanView.load("https://fest-digitalx23.expofp.com")
                 }
                 .onDisappear {
                     fplanView.destoy()
@@ -656,7 +659,7 @@ struct FplanApp: App {
 }
 ```
 
-### Navigation<a id='4.2.0-navigation'></a>
+## Navigation<a id='4.2.0-navigation'></a>
 
 There are 2 ways to use navigation in FplanView. The first way is to explicitly specify the provider. In this case, FplanView will start and stop the LocationProvider on its own.
 
@@ -667,7 +670,7 @@ fplanView.load(URL, locationProvider: locationProvider)
 
 The second way is to run in the background using GlobalLocationProvider when the program starts.
 
-### GlobalLocationProvider<a id='4.2.0-global-location-provider'></a>
+## GlobalLocationProvider<a id='4.2.0-global-location-provider'></a>
 
 Very often needed to run a location provider in the background, ExpoFP SDK has a GlobalLocationProvider for this. The GlobalLocationProvider runs once at program startup and work in the background.
 
@@ -697,7 +700,7 @@ GlobalLocationProvider.stop();
 
 ## CrowdConnected location provider<a id='4.2.0-cc-navigation'></a>
 
-#### Setup
+### Setup
 
 Сocoapods:
 
@@ -729,13 +732,13 @@ Permissions(in Info.plist file):
 <string>Platform location requested for better indoor positioning experience.</string>
 ```
 
-#### Initialization:
+### Initialization:
 
 ```swift
 let locationProvider: LocationProvider = CrowdConnectedProvider(Settings("APP_KEY", "TOKEN", "SECRET"))
 ```
 
-#### Recommended use
+### Recommended use
 
 When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.2.0-global-location-provider).
 
@@ -763,7 +766,7 @@ When the program terminates, the GlobalLocationProvider must also be stopped:
 GlobalLocationProvider.stop();
 ```
 
-#### Aliases
+### Aliases
 
 ```swift
 let settings = ExpoFpCrowdConnected.Settings("APP_KEY", "TOKEN", "SECRET")
@@ -774,7 +777,7 @@ let locationProvider: LocationProvider = CrowdConnectedProvider(settings)
 
 ## IndoorAtlas location provider<a id='4.2.0-ia-navigation'></a>
 
-#### Setup
+### Setup
 
 Сocoapods:
 
@@ -812,7 +815,7 @@ Permissions(in Info.plist file):
 <string>Bluetooth requested for better positioning experience.</string>
 ```
 
-#### Initialization:
+### Initialization:
 
 ```swift
 let locationProvider: LocationProvider = IndoorAtlasProvider(Settings("API_KEY", "API_SECRET_KEY"))
@@ -820,7 +823,7 @@ let locationProvider: LocationProvider = IndoorAtlasProvider(Settings("API_KEY",
 
 ## ExpoFP-GPS location provider<a id='4.2.0-efp-navigation'></a>
 
-#### Setup
+### Setup
 
 Сocoapods:
 
@@ -852,7 +855,7 @@ Permissions(in Info.plist file):
 <string>Platform location requested for better indoor positioning experience.</string>
 ```
 
-#### Initialization:
+### Initialization:
 
 ```swift
 let locationProvider: LocationProvider = new GpsProvider(getApplication())
