--- a/android-sdk/4.2.1.md
+++ b/android-sdk/4.2.1.md
@@ -246,7 +246,7 @@ The Settings class contains all the parameters necessary for the initialization 
   The default value for this parameter is false.
 
 ```java
-Settings settings = Settings(url: "https://demo.expofp.com", focusOnLocation: false, focusOnFirstLocation: true);
+Settings settings = new Settings(url: "https://demo.expofp.com", focusOnLocation: false, focusOnFirstLocation: true);
 ```
 
 ### withEventsListener method
